<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, FunkyPhoneLinkActivity!</string>
    <string name="app_name">Phone Link</string>
    <string name="autostart">Auto Start</string>
    <string name="autostart_summary">Start Phone Link when you turn your device</string>
    <string name="default_device">Default Dialling Device</string>
    <string name="default_device_summary">The device you wish to dial using</string>
    <string name="preferences">Settings</string>
    <string name="none">None</string>
    <string name="dial">Dial</string>
    <string name="number_hint">Phone Number</string>
    <string name="sms_hint">Enter SMS message</string>
    <string name="send_sms">Send SMS</string>
    <string name="strapbar">Phone Link by Funky Android Ltd.</string>
    <string name="warning">This software is in an early stage of development. Please do not use unless you have read the instructions carefully and
    you are willing to accept there may be bugs.</string>
        
    <string name="no_bluetooth">Bluetooth must be enabled to use Phone Link.</string>
    <string name="listener_start_failed">You device stopped Phone Link from listening for other devices.</string>
</resources>
