<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
    <TextView 		android:layout_width="fill_parent"
    				android:layout_height="wrap_content"
    				android:text="@string/warning"
    				android:padding="5dp"
    				android:gravity="center"
    				android:background="#400"/>
	<LinearLayout	android:orientation="horizontal"
				    android:layout_width="fill_parent"
	    			android:layout_height="wrap_content">
	    <EditText 	android:id="@+id/number"
	    			android:hint="@string/number_hint"
	    			android:layout_width="fill_parent"
	    			android:layout_height="wrap_content"
			        android:layout_weight="1"/>
	    <Button 	android:id="@+id/button"
	   				android:text="@string/dial"
	    			android:layout_width="fill_parent"
	    			android:layout_height="wrap_content"
			        android:layout_weight="2"/>
	</LinearLayout>    
	<LinearLayout	android:orientation="horizontal"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content">
	    <EditText 	android:id="@+id/message_text"
	    			android:hint="@string/sms_hint"
	    			android:layout_width="fill_parent"
	    			android:layout_height="wrap_content"
	    			android:lines="5"
			        android:layout_weight="1"/>
	    <Button 	android:id="@+id/smsButton"
	   				android:text="@string/send_sms"
	    			android:layout_width="fill_parent"
	    			android:layout_height="wrap_content"
			        android:layout_weight="2"
			        android:layout_gravity="bottom"/>
	</LinearLayout>    
	<ListView		android:id="@+id/contacts"
					android:layout_weight="1"
					android:layout_width="fill_parent" 
					android:layout_height="0dp"/>
	<TextView		android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:background="#ddd"
					android:textColor="#369"
					android:text="@string/strapbar"
					android:padding="5dp"
					android:gravity="center"
					android:textStyle="bold"
					android:layout_alignParentBottom="true"/>
</LinearLayout>
